<resources>
    <string name="app_name">Paimondex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Paimon</string>
    <string name="nav_header_subtitle">Your best travel companion ever!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_bookmark">Bookmark</string>

    <string name="menu_characters">Characters</string>
    <string name="menu_favorite">Favorite Characters</string>
    <string name="menu_about">About</string>
    <string name="rarity">Rarity</string>
    <string name="weapon">Weapon</string>
    <string name="vision">Vision</string>
    <string name="birthday">Birthday</string>
    <string name="constellation">Constellation</string>
    <string name="constellations">Constellations</string>
    <string name="nation">Region</string>
    <string name="affiliation">Affiliation</string>
    <string name="paimon_error_message">Sorry Traveler, something is wrong.</string>
    <string name="retry">Retry</string>
    <string name="talents">Talents</string>
    <string name="paimon_favorite_empty">How could this be empty, traveler?!</string>
    <string name="about">Thanks for test the Apps, this is an open source project that supported by https://github.com/genshindev/api for the data source. All of the contents are trademark of Hoyoverse.</string>
    <string name="github">https://github.com/ervinsu/Paimondex</string>
</resources>
